--- a/public/index.html
+++ b/public/index.html
@@ -1,80 +1,28 @@
-Html Webpack Plugin:
-<pre>
-  Error: Child compilation failed:
-  Module not found: Error: Can't resolve './index.bundle.js' in '/Users/wsm/Documents/wor  kshop/wApp/public':
-  Error: Can't resolve './index.bundle.js' in '/Users/wsm/Documents/workshop/wApp/public'  
-  - child-compiler.js:122 
-    [wApp]/[_html-webpack-plugin@4.3.0@html-webpack-plugin]/lib/child-compiler.js:122:18
-  
-  - Compiler.js:343 
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compiler.js:343:11
-  
-  - Compiler.js:681 
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compiler.js:681:15
-  
-  
-  - Hook.js:154 AsyncSeriesHook.lazyCompileHook
-    [wApp]/[_tapable@1.1.3@tapable]/lib/Hook.js:154:20
-  
-  - Compiler.js:678 
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compiler.js:678:31
-  
-  
-  - Hook.js:154 AsyncSeriesHook.lazyCompileHook
-    [wApp]/[_tapable@1.1.3@tapable]/lib/Hook.js:154:20
-  
-  - Compilation.js:1423 
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compilation.js:1423:35
-  
-  
-  - Hook.js:154 AsyncSeriesHook.lazyCompileHook
-    [wApp]/[_tapable@1.1.3@tapable]/lib/Hook.js:154:20
-  
-  - Compilation.js:1414 
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compilation.js:1414:32
-  
-  
-  - Hook.js:154 AsyncSeriesHook.lazyCompileHook
-    [wApp]/[_tapable@1.1.3@tapable]/lib/Hook.js:154:20
-  
-  - Compilation.js:1409 
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compilation.js:1409:36
-  
-  
-  - Hook.js:154 AsyncSeriesHook.lazyCompileHook
-    [wApp]/[_tapable@1.1.3@tapable]/lib/Hook.js:154:20
-  
-  - Compilation.js:1405 
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compilation.js:1405:32
-  
-  
-  - Hook.js:154 AsyncSeriesHook.lazyCompileHook
-    [wApp]/[_tapable@1.1.3@tapable]/lib/Hook.js:154:20
-  
-  - Compilation.js:1342 Compilation.seal
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compilation.js:1342:27
-  
-  - Compiler.js:675 
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compiler.js:675:18
-  
-  - Compilation.js:1261 
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compilation.js:1261:4
-  
-  
-  - Hook.js:154 AsyncSeriesHook.lazyCompileHook
-    [wApp]/[_tapable@1.1.3@tapable]/lib/Hook.js:154:20
-  
-  - Compilation.js:1253 Compilation.finish
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compilation.js:1253:28
-  
-  - Compiler.js:672 
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compiler.js:672:17
-  
-  
-  - Compilation.js:1185 
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compilation.js:1185:12
-  
-  - Compilation.js:1097 
-    [wApp]/[_webpack@4.43.0@webpack]/lib/Compilation.js:1097:9
-  
-</pre><script src="index.bundle.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>Welcome to my App</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  </body>
+</html>
